automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -549,7 +549,7 @@
     }
    ],
    "source": [
-    "friends = ['Bob', 'Sally', 'Fred']\n",
+    "friends = ['Bob', 'Sally', 'fred']\n",
     "for friend in friends:\n",
     "    print(friend)"
    ]
