automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "source": [
     "friends = ['bob', 'sally', 'fred']\n",
     "for friend in friends:\n",
-    "    print(friend.title())"
+    "    print(friend.ca[o())"
    ]
   },
   {
