automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
    "source": [
     "friends = ['bob', 'sally', 'fred']\n",
     "for friend in friends:\n",
-    "    print(friend.ca[o())"
+    "    print(friend.capitalize())"
    ]
   },
   {
